Update test load from file to ee version