@@ -1,6 +1,7 @@
 package com.icthh.xm.ms.configuration.service;
 
 import static com.icthh.xm.ms.configuration.domain.RequestSourceType.SYSTEM_QUEUE;
+import static java.nio.charset.StandardCharsets.UTF_8;
 import static org.junit.Assert.assertEquals;
 import static org.mockito.Mockito.doReturn;
 import static org.mockito.Mockito.times;
@@ -21,6 +22,7 @@ import com.icthh.xm.ms.configuration.domain.RequestSourceType;
 import com.icthh.xm.ms.configuration.domain.TenantState;
 import com.icthh.xm.ms.configuration.service.filter.AlwaysTruePermissionMsNameFilter;
 import java.io.IOException;
+import java.io.InputStream;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
@@ -28,6 +30,8 @@ import java.util.HashSet;
 import java.util.List;
 import java.util.Optional;
 import java.util.Set;
+
+import org.apache.commons.io.IOUtils;
 import org.junit.Before;
 import org.junit.Test;
 import org.junit.runner.RunWith;
@@ -36,6 +40,7 @@ import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.Spy;
 import org.mockito.runners.MockitoJUnitRunner;
+import org.springframework.core.io.ClassPathResource;
 
 @RunWith(MockitoJUnitRunner.class)
 public class PrivilegeServiceIntTest {
@@ -78,10 +83,10 @@ public class PrivilegeServiceIntTest {
         doReturn("permissions.yml").when(properties).getPermissionsSpecPath();
         doReturn("privileges.yml").when(properties).getPrivilegesSpecPath();
 
-        doReturn(Optional.of(getConfiguration("src/test/resources/privileges/privileges_initial.yml")))
+        doReturn(Optional.of(getConfiguration("privileges/privileges_initial.yml")))
             .when(configurationService)
             .findConfiguration("privileges.yml");
-        doReturn(Optional.of(getConfiguration("src/test/resources/permissions/permissions_initial.yml")))
+        doReturn(Optional.of(getConfiguration("permissions/permissions_initial.yml")))
             .when(configurationService)
             .findConfiguration("permissions.yml");
 
@@ -100,13 +105,13 @@ public class PrivilegeServiceIntTest {
 
         List<Configuration> allCaptures = argument.getAllValues();
         Configuration privilegeUpdate = allCaptures.get(0);
-        String expectedPrivileges = readFile("src/test/resources/privileges/privileges_expected_update.yml");
+        String expectedPrivileges = readFile("privileges/privileges_expected_update.yml");
 
         assertEquals("privileges.yml", privilegeUpdate.getPath());
         assertEquals(expectedPrivileges, privilegeUpdate.getContent());
 
         Configuration permissionUpdate = allCaptures.get(1);
-        String expectedPermissions = readFile("src/test/resources/permissions/permissions_expected_update.yml");
+        String expectedPermissions = readFile("permissions/permissions_expected_update.yml");
 
         assertEquals("permissions.yml", permissionUpdate.getPath());
         assertEquals(expectedPermissions, permissionUpdate.getContent());
@@ -119,7 +124,8 @@ public class PrivilegeServiceIntTest {
         return config;
     }
 
-    private String readFile(String s) throws IOException {
-        return Files.readString(Path.of(s), StandardCharsets.UTF_8);
+    private String readFile(String path) throws IOException {
+        InputStream cfgInputStream = new ClassPathResource(path).getInputStream();
+        return IOUtils.toString(cfgInputStream, UTF_8);
     }
 }
